# sky-genai

./: CMakeLists.txt  config.json  main.cpp
genai/: CMakeLists.txt
genai/src/genai/: chat.cxx  chat.hpp  common.hpp  exceptions.hpp  genai.cxx  genai.hpp  generation_config.hpp
include/misc/: Logger.h
sky_genai/: mod.cxx  mod.hpp  savedata.hpp  utils.hpp
